<resources>
    <string name="app_name">The Card Game</string>
    <string name="user_name_hint">User Name</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">LOG IN</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="sign_up_cancel">Cancel Sign Up</string>
    <string name="be_app_id">DE94EC57-E18B-7FDC-FF87-98D18585C000</string>
    <string name="be_android_api_key">FEFB348C-B7D7-DA1D-FF55-1A90C8B08500</string>
    <string name="authentication_error_title">User Authentication Error!</string>
    <string name="empty_field_signup_error">Be sure you have entered a user name, valid email and password.</string>
    <string name="registration_error_title">Registration Error!</string>
    <string name="log_in_error_title">Log In Error!</string>
    <string name="empty_filed_log_in_error">Be sure you have entered a user name valid password.</string>
    <string name="invalid_user_name_error">This user name already exists, please choose another.</string>
    <string name="invalid_password_error">Your password is too weak!</string>
    <string name="wait_message">Please wait!</string>
    <string name="create_account_wait_message">Creating your account now&#8230;</string>
    <string name="log_in_wait_message">Logging you in&#8230;</string>
    <string name="email_hint">Email</string>

    <string name="menu_title_text">The Card Game</string>
    <string name="menu_image_description">Image of cards</string>

    <string name="opponent_far_right_black_card">opponent far right black card</string>
    <string name="opponent_far_left_black_card">opponent far left black card</string>
    <string name="opponent_center_black_card">opponent center black card</string>
    <string name="user_far_right_black_card">user far right black card</string>
    <string name="user_mid_right_black_card">user mid right black card</string>
    <string name="user_far_left_black_card">user far left black card</string>
    <string name="user_mid_left_black_card">user mid left black card</string>
    <string name="user_center_black_card">user center black card</string>
    <string name="opponent_far_right_red_card">opponent far right red card</string>
    <string name="opponent_mid_right_red_card">opponent mid right red card</string>
    <string name="opponent_far_left_red_card">opponent far left red card</string>
    <string name="opponent_mid_left_red_card">opponent mid left red card</string>
    <string name="opponent_center_red_card">opponent center red card</string>
    <string name="opponent_mid_left_black_card">opponent mid left black card</string>
    <string name="opponent_mid_right_black_card">opponent mid right black card</string>
    <string name="user_far_left_red_card">user far left red card</string>
    <string name="user_mid_left_red_card">user mid left red card</string>
    <string name="user_far_right_red_card">user far right red card</string>
    <string name="user_mid_right_red_card">user mid right red card</string>
    <string name="user_center_red_card">user center red card</string>
    <string name="user_information">user information</string>
    <string name="opponent_information">opponent information</string>
    <string name="card_deck">card deck</string>
    <string name="user_data">Energy: %1$i\nHealth: %2$i</string>
    <string name="opponent_data">Energy: %1$i\nHealth: %2$i</string>

    <string name="play_text">Play!</string>
    <string name="settings_text">Settings</string>
    <string name="log_out_text">Log out</string>

    <string name="music_volume_text">Music Volume</string>
    <string name="game_volume_text">Game Volume</string>
    <string name="back_button_text">Back</string>

    <string name="play_title_text">Select an opponent to play</string>
    <string name="two_on_one_device_text">Two people on one device</string>
    <string name="against_a_bot_text">Against a bot</string>
    <string name="internet_text">On the internet</string>
    <string name="end_turn">End Turn</string>

    <string name="rules_button_text">Rules</string>

    <string name="rules_text">Rules of the game:\n\n
At the start of each player’s Turn, they draw 2 cards from the Draw Pile.\n\nAt the start of each player’s Turn, they gain 20 Energy\n\n
If a player ends their Turn with extra Energy, they carry over to the next Turn, up to a maximum of 30 Energy\n\n
Each player has a Turn each Round, the order in which they happen alternates (If player one goes first on round one, they go second on round two).\n\n
When both players have ended their Turns, all Attacking cards attack, in the order from the Draw Pile out.\n\n
Black cards are classified as Attacking cards, and red cards are classified as Defending cards.\n\n
Each player has 50 Health\n\n
If an Attacking card is not completely blocked by a Defending card, the remaining damage reduces the player’s Health by the Attacking card’s damage, subtracted by any Defending card’s health.\n\n
To play a card on your Turn, you must have Energy equal or greater to the card’s value (i.e. playing a 4 of clubs requires 4 Energy)\n\n
When you play a card, reduce your Energy by the card’s value.\n\n
Face cards (Jack, Queen, King and Ace) cost 15 Energy to play.\n\n
Ace\n
Red Aces have 1 health but can make a Defending card invincible for the Round\n
Black Aces deal 1 damage but can remove an opponent’s Defending card from the playing field before any attacks happen at the end of the Round\n\n
2 through 9\n
Red numbered cards have health equal to their value\n
Black numbered cards deal damage equal to their value\n\n
10\n
Red 10s have 10 health and can have other Defending cards placed in their lane.\n
Black 10s deal 10 damage and can have other Damaging cards placed in their lane.\n\n
Jack\n
Red Jacks have 10 health and allow you to draw an extra card each Turn they are on the board.\n
Black Jacks deal 10 damage and give you 5 extra Energy next Round while also increasing the maximum amount of Energy you carry over next turn to 40.\n\n
Queen\n
Red Queens can move into any open lane at the end of the Round before any Attack cards attack.\n
Black Queens can move into any open lane at the end of the Round before any Attack cards attack.\n\n
King\n
Reg Kings have 10 health and defend their adjacent rows from a single attack completely.\n
Black Kings deal 10 damage and attack adjacent rows for 5 damage\n\n
If a Joker card is played, the opponents next Turn is skipped, no cards or Energy are gained\n
(Jokers are not implemented yet)
</string>



    <string name="cost_text">Cost: </string>
    <string name="value_text">Value: </string>
    <string name="abilities_text">Special Abilities: </string>

    <string name="cost_text_value">%1$d</string>
    <string name="value_text_value">%1$d</string>
    <string name="abilities_text_value">A standard card.</string>

    <string name="health_text">Health: </string>
    <string name="damage_text">Damage: </string>

    <string name="red_jack_abilities">Red Jacks, when played, allow the player to draw an extra card on their turn.</string>
    <string name="black_jack_abilities">Black Jacks, when played, give the player 5 extra energy next turn and increase the maximum energy they may have.</string>
    <string name="red_king_abilities">Red Kings shield adjacent red cards. These shields completely absorb one attack before being destroyed.</string>
    <string name="black_king_abilities">Black Kings attack adjacent lanes for 5 damage.</string>
    <string name="red_queen_abilities">Red Queens can move to any open lane before any other cards attack at the end of the round.\nNote: If the intent for an opposing black Queen is to attack an open lane, a defending red Queen may annihilate with the attacking card.</string>
    <string name="black_queen_abilities">Black Queens can move to any open lane before any other cards attack at the end of the round.\nNote: If the intent for an opposing black Queen is to attack an open lane, a defending red Queen may annihilate with the attacking card.</string>
    <string name="red_ace_abilities">Red Aces, when played, can make one defending card, including itself, invulnerable to all attacks, even the Black Ace\'s assassination ability.</string>
    <string name="black_ace_abilities">Black Aces, when played, can completely destroy one opposing defending card before any other cards attack. This ability does not work against cards that are made invulnerable from a red Ace.</string>
    <string name="ten_card_abilities">Tens do not take up a space on the lane they are played.</string>


</resources>
