<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PlayScreenFragment">

    <TextView
        android:id="@+id/play_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play_title_text"/>

    <Button
        android:id="@+id/two_on_one_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/two_on_one_device_text"/>

    <Button
        android:id="@+id/against_a_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/against_a_bot_text"/>

    <Button
        android:id="@+id/on_the_internet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/internet_text"/>

</LinearLayout>